# server.js
@@ -3,7 +3,6 @@ const bodyParser = require("body-parser");
 const mongodb = require("./db/db.config");
 const recipesRouter = require("./routes/recipeRoutes");
 
-
 // authentication
 const { auth, requiresAuth } = require("express-openid-connect");
 
@@ -21,35 +20,27 @@ const config = {
 };
 
 // auth router attaches /login, /logout, and /callback routes to the baseURL
-app.use(auth(config));
+app.use(auth(config)); 
 
-// // Middleware to redirect unauthenticated users to the login page
-// const redirectToLogin = (req, res, next) => {
-//   if (!req.oidc.isAuthenticated()) {
-//     // Redirect unauthenticated users to the login page
-//     return res.redirect("/login");
-//   }
-//   // If authenticated, proceed to the next middleware or route handler
-//   next();
-// };
-
-// // redirect if not authorized 
-// app.use("/profile", redirectToLogin);
-// app.use("/recipes", redirectToLogin);
-
-// req.isAuthenticated is provided from the auth router
 app.get("/", (req, res) => {
   res.send(req.oidc.isAuthenticated() ? "Logged in" : "Logged out");
 });
-
 
 app.get("/profile", requiresAuth(), (req, res) => {
   res.send(JSON.stringify(req.oidc.user));
 });
 
-// get the recipes
-app.use("/recipes", recipesRouter);
+// app.use("/recipes", requiresAuth(), recipesRouter);
 
+//  app.get("/recipes", requiresAuth(), (req, res) => {
+//    res.send(JSON.stringify(req.oidc.user));
+//  });
+
+// app.post("/recipes", requiresAuth(), (req, res) => {
+//   res.send(JSON.stringify(req.oidc.user));
+// });
+// get the recipes
+// app.use("/recipes", recipesRouter);
 
 app
   .use(bodyParser.json())
